# RustyOrganizerMedia

./: .gitignore  Cargo.toml  env.example
src/: config.rs  error.rs  main.rs  scan.rs  search.rs
