[package]
name = "RustyOrganizerMedia"
description = "Réorganise un montage webdav en symlink"
authors = ["MaitreKuc"]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/maitrekuc/RustyOrganizerMedia"

[dependencies]
tvdb="0.6.0"
tmdb="3.0.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
walkdir = "2"
notify = "7"
thiserror = "2"
hunch="1.1.7"